[package]
name = "bevy_crab_networking"
version = "0.1.0"
edition = "2021"
authors = ["George Fitikides - redstonergm@gmail.com"]

[dependencies]
bevy = "0.14.2"
bincode = "1.3.3"
serde = "1.0.210"
serde_derive = "1.0.210"
bevy_crossbeam_event = "0.6.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "io-util", "net"] }
