[package]
name = "bevy_crab_networking"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Bevy plugin for sending data over TCP"
documentation = "https://docs.rs/bevy_crab_networking"
repository = "https://github.com/redstonerti/bevy_crab_networking"
authors = ["George Fitikides <redstonergm@gmail.com>"]

[dependencies]
bevy = "0.14.2"
bincode = "1.3.3"
serde = "1.0.210"
serde_derive = "1.0.210"
bevy_crossbeam_event = "0.6.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "io-util", "net"] }
